# gaijin_test

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/gaijin_test/: __init__.py
tests/: smoke_test.py
tests/data/test_dir_1/: a.py
tests/data/test_dir_1/1/: a.py  c.py
